--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,11 @@
     <string name="app_name">Research ExoPlayer code lab</string>
     <string name="player_activity_name">Media player</string>
     <string name="media_url_mp3">https://storage.googleapis.com/exoplayer-test-media-0/Jazz_In_Paris.mp3</string>
+
+    <string name="media_url_mp4_from_youtube_1">https://armorycodes.github.io/android-exoplayer/docs/video/video1.mp4</string>
+    <string name="media_url_mp4_from_youtube_2">https://armorycodes.github.io/android-exoplayer/docs/video/video2.mp4</string>
+    <string name="media_url_mp4_from_youtube_3">https://armorycodes.github.io/android-exoplayer/docs/video/video3.mp4</string>
+
     <!-- Big Buck Bunny video provided by the Blender Foundation.
     (c) copyright 2008, Blender Foundation / www.bigbuckbunny.org -->
     <string name="media_url_mp4">https://storage.googleapis.com/exoplayer-test-media-0/BigBuckBunny_320x180.mp4</string>
